--- a/Threax.AspNetCore.UrlFix/Threax.AspNetCore.UrlFix.csproj
+++ b/Threax.AspNetCore.UrlFix/Threax.AspNetCore.UrlFix.csproj
@@ -1,19 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.1.4</Version>
+    <TargetFrameworks>netstandard2.0;netcoreapp3.1</TargetFrameworks>
+    <Version>1.1.5-pre01</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <IncludeSymbols>True</IncludeSymbols>
     <IncludeSource>True</IncludeSource>
     <Description>A library to fix up urls if the current request is not what is expected.</Description>
     <Authors>Andrew Piper</Authors>
-    <PackageLicenseUrl>https://github.com/threax/Threax.AspNetCore.UrlFix/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/threax/Threax.AspNetCore.UrlFix</PackageProjectUrl>
     <RepositoryUrl>https://github.com/threax/Threax.AspNetCore.UrlFix</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
-  <ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.0.1" />
   </ItemGroup>
