--- a/Threax.AspNetCore.UrlFix/Threax.AspNetCore.UrlFix.csproj
+++ b/Threax.AspNetCore.UrlFix/Threax.AspNetCore.UrlFix.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netcoreapp3.1</TargetFrameworks>
-    <Version>1.1.5-pre01</Version>
+    <Version>1.1.5</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <IncludeSymbols>True</IncludeSymbols>
     <IncludeSource>True</IncludeSource>
